--- a/BobManager.API/BobManager.API/appsettings.json
+++ b/BobManager.API/BobManager.API/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BobManagerDB;Trusted_Connection=True;"
 }
