--- a/BobManager.API/BobManager.API/BobManager.API.csproj
+++ b/BobManager.API/BobManager.API/BobManager.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -12,9 +12,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BobManager.DataAccess\BobManager.DataAccess.csproj" />
     <ProjectReference Include="..\BobManager.Domain\BobManager.Domain.csproj" />
     <ProjectReference Include="..\BobManager.Dto\BobManager.Dto.csproj" />
   </ItemGroup>
