added account controller

--- a/BobManager.API/BobManager.API/appsettings.json
+++ b/BobManager.API/BobManager.API/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BobManagerDB;Trusted_Connection=True;"
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BobManagerDB;Trusted_Connection=True;",
+  "JwtKey": "IWANNABETHEBOSHANDHAVEASQUAREFORMNOTTRIANGLE",
+  "JwtIssuer": "http://bobmanager.com",
+  "JwtExpireDays": 5
 }
