Added middleware exceptions

--- a/BobManager.API/BobManager.Helpers/BobManager.Helpers.csproj
+++ b/BobManager.API/BobManager.Helpers/BobManager.Helpers.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.abstractions\2.1.1\lib\netstandard2.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Extensions.Logging.Abstractions">
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.logging.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
@@ -44,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extentions\IApplictionBuilderExtentions.cs" />
+    <Compile Include="Extentions\MiddlewareException.cs" />
     <Compile Include="Extentions\StringExtentions.cs" />
     <Compile Include="Logger\FileLogger\FileLogger.cs" />
     <Compile Include="Logger\FileLogger\LoggingFile.cs" />
