Add error logging in auth

--- a/BobManager.API/BobManager.Domain/BobManager.Domain.csproj
+++ b/BobManager.API/BobManager.Domain/BobManager.Domain.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BobManager.DataAccess\BobManager.DataAccess.csproj" />
     <ProjectReference Include="..\BobManager.Dto\BobManager.Dto.csproj" />
+    <ProjectReference Include="..\BobManager.Helpers\BobManager.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
