--- a/BobManager.Client/client/package.json
+++ b/BobManager.Client/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "bootstrap": "^4.3.1",
+    "color-convert": "^2.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
