--- a/BobManager.Client/client/package.json
+++ b/BobManager.Client/client/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@auth0/angular-jwt": "^3.0.1",
+    "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
