--- a/BobManager.Client/client/package.json
+++ b/BobManager.Client/client/package.json
@@ -26,6 +26,7 @@
     "color-convert": "^2.0.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
